Release 25.2.0
Release notes are available at: https://docs.dremio.com/release-notes/

Change-Id: I15b68417d93fa4408a43bb3dd1b926988464e420